# rayguy

./: Cargo.toml  README.md
ezbuffer/: Cargo.toml
ezbuffer/src/: lib.rs
rayguy/: Cargo.toml
rayguy/src/: main.rs
src/: color.rs  consts.rs  main.rs  math.rs
