[package]
name = "rayguy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
softbuffer = "0.3.0"
ezbuffer = { git = "https://github.com/serd223/framebrush.git", rev = "f5657e074d4ca878bdce40c4bc3a8fb17c341fd4"		}
winit = "0.28.6"
